# api/docs/swagger.json
@@ -40,6 +40,71 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create an invite to allow new user to join admin's organization",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Invite"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "User or Organization not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to create invite",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/organization/data": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all of the spots data associated with an organization",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/database.Spot"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/auth/info": {
@@ -194,12 +259,6 @@
         },
         "/spots/delete": {
             "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
                 "summary": "Delete a spot by it's ID",
                 "responses": {
                     "200": {
@@ -223,12 +282,34 @@
                 }
             }
         },
-        "/spots/near": {
+        "/spots/info": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Get the spots near a longitude and latitude",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Spot"
+                        }
+                    },
+                    "404": {
+                        "description": "Spot was not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/spots/near": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get the spots near a longitude and latitude, with optional handicap filter",
                 "parameters": [
                     {
                         "type": "number",
@@ -243,6 +324,12 @@
                         "name": "lng",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "filter spots by handicap accessibility",
+                        "name": "handicap",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -253,9 +340,9 @@
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Could not load the list of spots",
                         "schema": {
-                            "$ref": "#/definitions/database.Error"
+                            "type": "string"
                         }
                     }
                 }
@@ -286,23 +373,34 @@
                 }
             }
         },
+        "database.Invite": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "createdBy": {
+                    "type": "integer"
+                },
+                "expiration": {
+                    "type": "string"
+                },
+                "organization": {
+                    "type": "integer"
+                },
+                "usedBy": {
+                    "type": "integer"
+                }
+            }
+        },
         "database.Organization": {
             "type": "object",
             "properties": {
-                "admins": {
+                "invites": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/database.User"
+                        "$ref": "#/definitions/database.Invite"
                     }
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -312,8 +410,25 @@
                     "items": {
                         "$ref": "#/definitions/database.Spot"
                     }
+                }
+            }
+        },
+        "database.Reservation": {
+            "type": "object",
+            "properties": {
+                "costPerHour": {
+                    "type": "integer"
                 },
-                "updatedAt": {
+                "end": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "start": {
                     "type": "string"
                 }
             }
@@ -324,17 +439,11 @@
                 "coords": {
                     "$ref": "#/definitions/database.Coordinates"
                 },
-                "createdAt": {
+                "guid": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "handicap": {
                     "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -342,36 +451,21 @@
                 "organization": {
                     "type": "integer"
                 },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "database.User": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
-        "gorm.DeletedAt": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
+                "reservations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/database.Reservation"
+                    }
                 }
             }
         },
         "routes.JWTResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
         },
         "routes.ReservationInput": {
             "type": "object",
